[gd_scene load_steps=4 format=3 uid="uid://bamxqy6vntqln"]

[ext_resource type="PackedScene" uid="uid://d2qvhjcwwroyc" path="res://player.tscn" id="1_42rwc"]
[ext_resource type="Script" path="res://main.gd" id="1_sep4h"]
[ext_resource type="PackedScene" uid="uid://bm3ndbedk3xah" path="res://exit.tscn" id="3_gm7d2"]

[node name="Main" type="Node2D"]
script = ExtResource("1_sep4h")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0

[node name="Player" parent="." instance=ExtResource("1_42rwc")]
z_index = 1
position = Vector2(-136, 408)

[node name="Exit" parent="." instance=ExtResource("3_gm7d2")]
position = Vector2(1000, 336)

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 24.0
offset_top = 16.0
offset_right = 296.0
offset_bottom = 152.0
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect2"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 264.0
offset_bottom = 128.0

[node name="Label" type="Label" parent="ColorRect2/VBoxContainer"]
layout_mode = 2
text = "Total Mobs Killed"

[node name="total_label" type="Label" parent="ColorRect2/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="ColorRect2/VBoxContainer"]
layout_mode = 2
text = "Killed This Session"

[node name="current_label" type="Label" parent="ColorRect2/VBoxContainer"]
layout_mode = 2
